2.1.21 (unreleased)
-------------------

- fix bug in fastticketing [amleczko]


2.1.20 (2014-02-05)
-------------------

- fix paths [amleczko]
- remove outstanding tickets [amleczko]
- fix icons [amleczko]
- add user stats [amleczko]
- add default form actions [amleczko]
- simplify angularjs integration [amleczko]
- fix redis pub/sub [amleczko]
- include feedly notifications [amleczko]
- add redis kanbanboard support [amleczko]
- fixes to kanbanboard [amleczko]
- performance fixes for my_time_entries report [amleczko]
- fix search after moving to new deform [amleczko]
- fixes for migrate form [amleczko]


2.1.10 (2014-01-20)
-------------------

- fix change_state problem in estimations tab [amleczko]
- fix tekken `done` column [amleczko]
- add user costs [amleczko]
- small bug fixing [amleczko]
- new fields for quality report [amleczko]
- removes deprecated function get_user_by_login [amleczko]
- upgrade to deform 0.9.9 [amleczko]
- make project related chosen field more automatic [amleczko]
- add quick link to reports from tekken [amleczko]
- add proper HTML title tag [amleczko]
- refactor notifications [amleczko]
- new quality report - operator [amleczko]
- fix problem with js select in teken listing [amleczko]
- svn_login no longer required during user creation [amleczko]
- fix author override in new time entry creation [amleczko]
- estimations popover [amleczko]
- automatization for wizard form [amleczko]
- automatization for estimation wf_state [amleczko]
- Enable newrelic hooks if config is available [amleczko]
- internal develope can create customer_request [amleczko]
- fix populate_with_dummies script [amleczko]
- update dashboard [amleczko]
- add fixes for wizard project form [amleczko]
- fix security check in tekken view [amleczko]
- update quality reports [amleczko]
- Add massive time entry move [amleczko]
- Add workflow state change form for customer request listing (tekken) [amleczko]
- fix reports filtering [amleczko]
- fix tekken js [amleczko]